--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install Python lint tools
         run: |
           python -m pip install --upgrade pip
-          pip install isort ruff
+          pip install isort ruff httpx
 
       - name: Run lints
         run: ./scripts/lint
