--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,75 +1,96 @@
-.gthub/name: Publish Python 🐍 distribution 📦 to PyPI and TestPyPI
-
+name: CI
 on:
   push:
-    tags:
-      - "*"
+    branches-ignore:
+      - 'generated'
+      - 'codegen/**'
+      - 'integrated/**'
+      - 'stl-preview-head/**'
+      - 'stl-preview-base/**'
+  pull_request:
+    branches-ignore:
+      - 'stl-preview-head/**'
+      - 'stl-preview-base/**'
 
 jobs:
+  lint:
+    timeout-minutes: 10
+    name: lint
+    runs-on: ${{ github.repository == 'stainless-sdks/jocall3-python' && 'depot-ubuntu-24.04' || 'ubuntu-latest' }}
+    if: github.event_name == 'push' || github.event.pull_request.head.repo.fork
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          version: '0.9.13'
+
+      - name: Install Python lint tools
+        run: |
+          python -m pip install --upgrade pip
+          pip install isort ruff
+
+      - name: Run lints
+        run: ./scripts/lint
+
   build:
-    name: Build distribution 📦
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          persist-credentials: false
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.x"
-
-      - name: Install build tooling
-        run: python -m pip install --upgrade build
-
-      - name: Build wheel and sdist
-        run: python -m build
-
-      - name: Upload distributions
-        uses: actions/upload-artifact@v4
-        with:
-          name: python-package-distributions
-          path: dist/
-
-  publish-to-pypi:
-    name: Publish to PyPI
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: pypi
-      url: https://pypi.org/p/jocall3-python
+    if: github.event_name == 'push' || github.event.pull_request.head.repo.fork
+    timeout-minutes: 10
+    name: build
     permissions:
+      contents: read
       id-token: write
-
+    runs-on: ${{ github.repository == 'stainless-sdks/jocall3-python' && 'depot-ubuntu-24.04' || 'ubuntu-latest' }}
     steps:
-      - name: Download distributions
-        uses: actions/download-artifact@v4
+      - uses: actions/checkout@v6
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
         with:
-          name: python-package-distributions
-          path: dist/
+          version: '0.9.13'
 
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+      - name: Install dependencies
+        run: uv sync --all-extras
 
-  publish-to-testpypi:
-    name: Publish to TestPyPI
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: testpypi
-      url: https://test.pypi.org/p/jocall3-python
-    permissions:
-      id-token: write
+      - name: Run build
+        run: uv build
 
+      - name: Get GitHub OIDC Token
+        if: github.repository == 'stainless-sdks/jocall3-python'
+        id: github-oidc
+        uses: actions/github-script@v8
+        with:
+          script: core.setOutput('github_token', await core.getIDToken());
+
+      - name: Upload tarball
+        if: github.repository == 'stainless-sdks/jocall3-python'
+        env:
+          URL: https://pkg.stainless.com/s
+          AUTH: ${{ steps.github-oidc.outputs.github_token }}
+          SHA: ${{ github.sha }}
+        run: ./scripts/utils/upload-artifact.sh
+
+  test:
+    timeout-minutes: 10
+    name: test
+    runs-on: ${{ github.repository == 'stainless-sdks/jocall3-python' && 'depot-ubuntu-24.04' || 'ubuntu-latest' }}
+    if: github.event_name == 'push' || github.event.pull_request.head.repo.fork
     steps:
-      - name: Download distributions
-        uses: actions/download-artifact@v4
-        with:
-          name: python-package-distributions
-          path: dist/
+      - uses: actions/checkout@v6
 
-      - name: Publish to TestPyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
         with:
-          repository-url: https://test.pypi.org/legacy/
+          version: '0.9.13'
+
+      - name: Bootstrap
+        run: ./scripts/bootstrap
+
+      - name: Install Python test tools
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest pytest-asyncio
+
+      - name: Run tests
+        run: pytest -n 1 --maxfail=1 --disable-warnings
