--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -90,7 +90,7 @@ jobs:
       - name: Install Python test tools
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-asyncio
+          pip install httpx pytest pytest-asyncio
 
       - name: Run tests
         run: pytest -n 1 --maxfail=1 --disable-warnings
